# grpo-detection

./: .gitignore  README.md  custom_reward_functions.py  generate_training_data.py  main.py  mlx_lm_train.sh  parquet.py  pyproject.toml  reward_function.py  test.py  test_data.jsonl  testing.py  train_data.jsonl  train_data_2.jsonl  valid_data.jsonl
data/: test-00000-of-00001.parquet  train-00000-of-00001.parquet  valid-00000-of-00001.parquet
logs/: detection_log_20250217-214558.jsonl  detection_log_20250217-215053.jsonl  detection_log_20250217-215528.jsonl  detection_log_20250217-221629.jsonl  detection_log_20250217-223744.jsonl  detection_log_20250218-070347.jsonl  detection_log_20250218-085015.jsonl  detection_log_20250220-150009.jsonl  detection_log_20250220-150510.jsonl  detection_log_20250220-150741.jsonl  detection_log_20250220-153750.jsonl  detection_log_20250220-155455.jsonl  detection_log_20250305-161252.jsonl  detection_log_20250305-161420.jsonl  detection_log_20250305-161458.jsonl  detection_log_20250305-161844.jsonl  detection_log_20250305-162113.jsonl  detection_log_20250305-162621.jsonl  detection_log_20250305-205427.jsonl  detection_log_20250305-210523.jsonl  detection_log_20250305-210613.jsonl  detection_log_20250305-210821.jsonl  detection_log_20250305-210854.jsonl  detection_log_20250305-211144.jsonl  detection_log_20250305-211422.jsonl  detection_log_20250305-212133.jsonl
mlx_lm_lora/: train.py
mlx_lm_lora/trainer/: datasets.py  (+1 more)
mlx_parallm/: utils.py
src/: detection.py  llm_eval.py  mlx_generate.py  ollama_generate.py  reward.py
(+5 files in other folders)
