[project]
name = "grpo-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ace-tools>=0.0",
    "datasets>=3.6.0",
    "mlx>=0.26.1",
    "mlx-lm>=0.25.2",
    "mlx-lm-lora>=0.7.0",
    "ollama>=0.5.1",
    "peft>=0.15.2",
    "requests>=2.32.4",
    "ripplex>=1.0.1",
    "transformers>=4.52.4",
    "trl>=0.18.2",
    "wandb>=0.20.1",
]

[tool.uv.sources]
trl = { git = "https://github.com/huggingface/trl" }
mlx-lm-lora = { git = "https://github.com/Goekdeniz-Guelmez/mlx-lm-lora" }
